# pdf-rag-chatbot

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile
src/pdf_rag_chatbot/agents/: __init__.py  parser_agent.py  response_agent.py
src/pdf_rag_chatbot/app/: __init__.py  app.py
src/pdf_rag_chatbot/cli/: pdf_rag_chatbot.py  pdf_rag_preprocessor.py
src/pdf_rag_chatbot/data_pipeline/: __init__.py  text_pipeline.py
src/pdf_rag_chatbot/data_pipeline/messages/: __init__.py  messages.py
src/pdf_rag_chatbot/data_pipeline/steps/: __init__.py  embed.py  ingest.py  nlp.py  pipeline_step.py
src/pdf_rag_chatbot/db/: __init__.py  models.py  setup_database.py
